--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "drizzle-kit": "^0.31.9",
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
+    "supabase": "^2.76.12",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
