--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,9 @@ jobs:
       - name: Install deps
         run: npm ci
 
+      - name: Secret scan
+        run: npm run security:scan
+
       - name: Lint
         run: npm run lint
 
