--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "preflight": "npm run lint && npm run build"
+    "security:scan": "./scripts/security-scan.sh",
+    "preflight": "npm run security:scan && npm run lint && npm run build"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
